--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -66,12 +66,21 @@ layout: default
                         <li data-toggle="ds-share-icons-more"><a class="ds-more" href="#">分享到：</a></li>
                         <li><a class="ds-weibo flat" href="javascript:void(0);" data-service="weibo">微博</a></li>
                         <li><a class="ds-wechat flat" href="javascript:void(0);" data-service="wechat">微信</a></li>
+                        <li> <a class="ds-qq" href="javascript:void(0);" data-service="qq">QQ</a> </li> 
                         <li><a class="ds-qzone" href="javascript:void(0);" data-service="qzone">QQ空间</a></li>
-                        <li><a class="ds-wechat flat" href="javascript:void(0);" data-service="wechat">微信</a></li>
+                        <li><a class="ds-qqt" href="javascript:void(0);" data-service="qqt">腾讯微博</a></li>
+                        <li> <a class="ds-netease" href="javascript:void(0);" data-service="netease">网易微博</a>
+                        <li> <a class="ds-sohu" href="javascript:void(0);" data-service="sohu">搜狐微博</a> </li>
                         <li><a class="ds-douban flat" href="javascript:void(0);" data-service="douban">豆瓣</a></li>
+                        <li> <a class="ds-renren" href="javascript:void(0);" data-service="renren">人人网</a></li>
+                        <li> <a class="ds-youdao" href="javascript:void(0);" data-service="youdao">有道云笔记</a>
+                        <li> <a class="ds-facebook" href="javascript:void(0);" data-service="facebook">Facebook</a> </li>
+                        <li> <a class="ds-twitter" href="javascript:void(0);" data-service="twitter">Twitter</a> </li> 
+                        <li> <a class="ds-linkedin" href="javascript:void(0);" data-service="linkedin">Linkedin</a> </li> 
+                        <li> <a class="ds-google" href="javascript:void(0);" data-service="google">谷歌</a> </li>
                       </ul>
-                      <div class="ds-share-icons-more">
-                      </div>
+                      <!-- <div class="ds-share-icons-more">
+                      </div> -->
                     </div>
                 <hr>
                 </div>
