--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,16 +4,18 @@
 
         <h2>About me</h2>
 
-        <p>BlaBlaBla BlaBlaBla BlaBlaBla BlaBlaBla BlaBlaBla BlaBlaBla BlaBlaBla BlaBlaBla</p>
+        <p>求知的路上，太多的东西需要去积累，当大脑承载不住知识的填充，希望能以博客的方式记录点滴生活，记录自己的学习历程。</p>
 
-        <h2>Contact</h2>
+        <p>建立博客之初，旨在督促自己热爱生活与学习，从了解文档与部署环境前后大概使用了一周时间，因为对前端并不熟悉，同时选择困难症怀孕了很久，最终还是弄出了点像样的东西，算是给自己的小屋封好了顶。</p>
+
+<!--         <h2>Contact</h2>
 
         <ul>
             <li>Email：<a href="mailto:{{ site.email }}" target="_top">{{ site.email }}</a></li>
             <li>Website：<a href="{{ site.github_url }}">{{ site.github_url }}</a></li>
-        </ul>
+        </ul> -->
 
-        <h2>Skill Keywords</h2>
+        <!-- <h2>Skill Keywords</h2>
 
         {% if site.skill_software_keywords %}
         <div class="panel panel-default">
@@ -65,7 +67,7 @@
                 {% endfor %}
             </div>
         </div>
-        {% endif %}
+        {% endif %} -->
 
     </div>
 
