--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,12 +8,12 @@
 
         <p>建立博客之初，旨在督促自己热爱生活与学习，从了解文档与部署环境前后大概使用了一周时间，因为对前端并不熟悉，同时选择困难症怀孕了很久，最终还是弄出了点像样的东西，算是给自己的小屋封好了顶。</p>
 
-<!--         <h2>Contact</h2>
+        <h2>Contact</h2>
 
         <ul>
             <li>Email：<a href="mailto:{{ site.email }}" target="_top">{{ site.email }}</a></li>
             <li>Website：<a href="{{ site.github_url }}">{{ site.github_url }}</a></li>
-        </ul> -->
+        </ul>
 
         <!-- <h2>Skill Keywords</h2>
 
